# Oxy

./: .gitignore  CMakeLists.txt  main.c
Old/: CMakeCache.txt  CMakeLists.txt  Makefile  ast.cpp  ast.h  cmake_install.cmake  common.h  io.cpp  io.h  lex.cpp  lex.h  main.cpp  parser.cpp  parser.h  pratt  pratt.cpp  pratt.h  print.cpp  print.h  token.cpp  token.h
Old/docs/: motivation.md  syntax.md
docs/: motivation.md  syntax.md
src/: ast.c  ast.h  ast_io.c  ast_io.h  checker.c  checker.c.bak  checker.def  checker.h  common.c  common.h  io.c  io.h  lex.c  lex.h  oxy.c  oxy.h  parser.c  parser.h  print.c  print.h  queue.c  queue.h  report.c  report.h  scope.c  scope.h  token.c  token.h  type.c  type.h  value.c  value.h
tests/: demo.oxy  parser_test.oxy  scanner_test.oxy  simple_parse.oxy
